# code-example-1

./: main.py  pyproject.toml  requirements.txt
tests/: test_test_spot_bugs.py
tests/features/: spot_bugs.feature
tests/reports/: bdd_report.html
tests/step_defs/: spot_bugs_steps.py
